--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		/>
 		<meta name="description" content="" />
 		<meta name="author" content="" />
-		<title>Cakepoint - Coming Soon</title>
+		<title>Cakepoint - Launching Soon</title>
 		<link rel="icon" type="image/x-icon" href="assets/cakepoint.jpeg" />
 		<!-- Font Awesome icons (free version)-->
 		<script
@@ -29,7 +29,7 @@
 		/>
 		<style>
 			body {
-				background-image: url(assets/img/img.jpg);
+				background-image: url(assets/img.jpg);
 				background-repeat: no-repeat;
 				background-attachment: fixed;
 				background-size: cover;
@@ -153,7 +153,6 @@
 			</p>
 		</div>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js"></script>
-		<script src="js/scripts.js"></script>
 		<script src="https://cdn.startbootstrap.com/sb-forms-latest.js"></script>
 	</body>
 </html>
